[project]
name = "Comfyui-Prompt-Sorter"
description = "Interactive button-based trigger word manager with precision weighting and portable collections."
version = "1.0.1"
license = {text = "MIT"}
dependencies = []

[project.urls]
Repository = "https://github.com/revisionhiep-create/Comfyui-Prompt-Sorter"

[tool.comfy]
PublisherId = "revybevy"
DisplayName = "Comfyui-Prompt-Sorter"
Icon = "https://raw.githubusercontent.com/revisionhiep-create/comfyui-standard-trigger-words/refs/heads/main/Node%20Icon.png"

