[project]
name = "Comfyui-Prompt-Sorter"
description = "Interactive button-based trigger word manager with precision weighting and portable collections."
version = "1.0.2"
license = {text = "MIT"}
dependencies = []

[project.urls]
Repository = "https://github.com/revisionhiep-create/Comfyui-Prompt-Sorter"

[tool.comfy]
PublisherId = "revybevy"
DisplayName = "Comfyui-Prompt-Sorter"
Icon = ""


